Fix missing display of last element in scrollbar

--- a/static/tutorial/layout.css
+++ b/static/tutorial/layout.css
@@ -26,7 +26,9 @@
  left: 0;
  /* background-color: #111;  */
  overflow-x: hidden;
-
+ padding-top: 20px;
+ padding-bottom: 100px;
+ width: 300px;
 }
 
 /* The navigation menu links */
@@ -46,12 +48,6 @@
   color: black;
   background-color: grey;
   font-weight: bold;
-}
-
-#toc {
-  padding-top: 20px;
-  width: 300px;
-  /* background-color: blue; */
 }
 
 #toc .card {
